# fit4702_ml_fairness

./: .gitignore  README.md  compas.csv  dataset.py  directed_aq.py  directed_aq_harness.py  flipping_script.py  harness.py  hypothesis_testing.py  logistic_regression.py  model.py  neural_net.py  pipeline.py  pyproject.toml  random_script.py  random_test_harness.py  requirements.txt  test_aq.py  testing_stats.py  total_test_harness.py
directed_aequitas/: Aequitas_Fully_Directed.py  Aequitas_Fully_Directed_Sklearn.py  Aequitas_Random.py  Aequitas_Random_Sklearn.py  Aequitas_Semi_Directed.py  Aequitas_Semi_Directed_Sklearn.py  Retrain_Fair_SVM.py  Retrain_Sklearn.py  SVM_Fair_Estimation.py  Sklearn_Estimation.py  pyproject.toml  utils.py
statistical_results/: rq1.csv  rq1_adult.csv  rq1_compas.csv  rq1_german.csv  rq2_adult_correlation.csv  rq2_adult_pvalues.csv  rq2_compas_correlation.csv  rq2_compas_pvalues.csv  rq2_german_correlation.csv  rq2_german_pvalues.csv
