[tool.poetry]
name = "fit4702-ml-fairness"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
aequitas = "^0.42.0"
imbalanced-learn = "^0.11.0"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
